# docs/swagger.json
@@ -9,6 +9,26 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
+        "/health": {
+            "get": {
+                "description": "Returns service health status",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "health"
+                ],
+                "summary": "Health check",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/http.HealthProbe"
+                        }
+                    }
+                }
+            }
+        },
         "/todos": {
             "post": {
                 "description": "Create a todo entity inside our abstract datastore layer",
@@ -89,6 +109,14 @@
                     "type": "string"
                 },
                 "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "http.HealthProbe": {
+            "type": "object",
+            "properties": {
+                "status": {
                     "type": "string"
                 }
             }
